data/derived/fa15/progs/unify/prog3672.ml.out
Characters 112-130:
  let seen' = if (List.mem(h seen)) then 
                 ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
